wip: add keywords to filtering
